@@ -34,109 +34,17 @@ using VDS.RDF.Storage;
 namespace VDS.RDF.Utilities.StoreManager.Connections.BuiltIn
 {
     /// <summary>
-    /// Supported Stardog versions
+    /// Definition for connections to Stardog 2.x
     /// </summary>
-    public enum StardogVersion
-    {
-        /// <summary>
-        /// Version 1.x
-        /// </summary>
-        Version1,
-        /// <summary>
-        /// Version 2.x
-        /// </summary>
-        Version2
-    }
-
-    /// <summary>
-    /// Definition for connections to Stardog
-    /// </summary>
-    public class StardogConnectionDefinition
-        : BaseHttpServerConnectionDefinition
+    public class StardogV2ConnectionDefinition
+        : BaseStardogConnectionDefinition
     {
         /// <summary>
         /// Creates a new definition
         /// </summary>
-        public StardogConnectionDefinition()
-            : base("Stardog", "Connect to a Stardog database exposed via the Stardog HTTP server", typeof (StardogConnector))
+        public StardogV2ConnectionDefinition()
+            : base("Stardog 2.x", "Connect to a Stardog 2.x database exposed via the Stardog HTTP server", typeof (StardogConnector))
         {
-            this.Version = StardogVersion.Version2;
-        }
-
-        /// <summary>
-        /// Gets/Sets the Stardog version to use
-        /// </summary>
-        [Connection(DisplayName="Stardog Version", IsRequired=true, DisplayOrder=-2, Type=ConnectionSettingType.Enum),
-         DefaultValue(StardogVersion.Version2)]
-        public StardogVersion Version { get; set; }
-
-        /// <summary>
-        /// Gets/Sets the Server URI
-        /// </summary>
-        [Connection(DisplayName="Server URI", IsRequired=true, AllowEmptyString=false, DisplayOrder=-1, PopulateFrom=ConfigurationLoader.PropertyServer),
-         DefaultValue("http://localhost:5820/")]
-        public override String Server
-        {
-            get
-            {
-                return base.Server;
-            }
-            set
-            {
-                base.Server = value;
-            }
-        }
-
-        /// <summary>
-        /// Gets/Sets the Store ID
-        /// </summary>
-        [Connection(DisplayName = "Store ID", DisplayOrder = 1, AllowEmptyString = false, IsRequired = true, PopulateFrom = ConfigurationLoader.PropertyStore)]
-        public String StoreID
-        {
-            get;
-            set;
-        }
-
-        /// <summary>
-        /// Gets/Sets the Reasoning Mode for queries
-        /// </summary>
-        [Connection(DisplayName="Query Reasoning Mode", DisplayOrder=2, Type=ConnectionSettingType.Enum, PopulateFrom = ConfigurationLoader.PropertyLoadMode),
-         DefaultValue(StardogReasoningMode.None)]
-        public StardogReasoningMode ReasoningMode
-        {
-            get;
-            set;
-        }
-
-        /// <summary>
-        /// Gets/Sets the Username
-        /// </summary>
-        [Connection(DisplayName = "Username", DisplayOrder = 3, IsRequired = false, AllowEmptyString = true, PopulateFrom = ConfigurationLoader.PropertyUser)]
-        public String Username
-        {
-            get;
-            set;
-        }
-
-        /// <summary>
-        /// Gets/Sets the Password
-        /// </summary>
-        [Connection(DisplayName = "Password", DisplayOrder = 4, IsRequired = false, AllowEmptyString = true, Type = ConnectionSettingType.Password, PopulateFrom = ConfigurationLoader.PropertyPassword)]
-        public String Password
-        {
-            get;
-            set;
-        }
-
-        /// <summary>
-        /// Gets/Sets whether to use the Stardog anonymous account
-        /// </summary>
-        [Connection(DisplayName="Use the Stardog default anonymous user account instead of an explicit Username and Password?", DisplayOrder=5, Type=ConnectionSettingType.Boolean),
-         DefaultValue(false)]
-        public bool UseAnonymousAccount
-        {
-            get;
-            set;
         }
 
         /// <summary>
@@ -149,47 +57,71 @@ namespace VDS.RDF.Utilities.StoreManager.Connections.BuiltIn
             {
                 if (this.UseProxy)
                 {
-                    switch (this.Version)
-                    {
-                        case StardogVersion.Version1:
-                            return new StardogV1Connector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser, this.GetProxy());
-                        default:
-                            return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser, this.GetProxy());
-                    }
+                    return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser, this.GetProxy());
                 }
-                else
-                {
-                    switch (this.Version)
-                    {
-                        case StardogVersion.Version1:
-                            return new StardogV1Connector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser);
-                        default:
-                            return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser);
-                    }
-                }
+
+                return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser);
             }
             else
             {
                 if (this.UseProxy)
                 {
-                    switch (this.Version)
-                    {
-                        case StardogVersion.Version1:
-                            return new StardogV1Connector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password, this.GetProxy());
-                        default:
-                            return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password, this.GetProxy());
-                    }
+                    return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password, this.GetProxy());
                 }
-                else
+
+                return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password);
+            }
+        }
+    }
+
+        /// <summary>
+    /// Definition for connections to Stardog 1.x
+    /// </summary>
+    public class StardogV1ConnectionDefinition
+        : BaseStardogConnectionDefinition
+    {
+        /// <summary>
+        /// Creates a new definition
+        /// </summary>
+        public StardogV1ConnectionDefinition()
+            : base("Stardog 1.x", "Connect to a Stardog 1.x database exposed via the Stardog HTTP server", typeof (StardogConnector))
+        {
+        }
+
+        /// <summary>
+        /// Gets/Sets the Server URI
+        /// </summary>
+        [Connection(DisplayName = "Server URI", IsRequired = true, AllowEmptyString = false, DisplayOrder = -1, PopulateFrom = ConfigurationLoader.PropertyServer),
+         DefaultValue("http://localhost:5822/")]
+        public override String Server
+        {
+            get { return base.Server; }
+            set { base.Server = value; }
+        }
+
+        /// <summary>
+        /// Opens the connection
+        /// </summary>
+        /// <returns></returns>
+        protected override IStorageProvider OpenConnectionInternal()
+        {
+            if (this.UseAnonymousAccount)
+            {
+                if (this.UseProxy)
                 {
-                    switch (this.Version)
-                    {
-                        case StardogVersion.Version1:
-                            return new StardogV1Connector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password);
-                        default:
-                            return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password);
-                    }
+                    return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser, this.GetProxy());
                 }
+
+                return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, BaseStardogConnector.AnonymousUser, BaseStardogConnector.AnonymousUser);
+            }
+            else
+            {
+                if (this.UseProxy)
+                {
+                    return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password, this.GetProxy());
+                }
+
+                return new StardogConnector(this.Server, this.StoreID, this.ReasoningMode, this.Username, this.Password);
             }
         }
     }
